Giraph Change Log

Release 0.2.0 - unreleased
  GIRAPH-278: Website still tries to load incubator logo (ekoontz)

  GIRAPH-300) Improve netty reliability with retrying failed
  connections, tracking requests, thread-safe hash partitioning
  (aching via apresta).

  GIRAPH-296: TotalNumVertices and TotalNumEdges are not saved in
  checkpoint.  (majakabiljo via apresta)

  GIRAPH-297: Checkpointing on master is done one superstep later
  (majakabiljo via aching).

  GIRAPH-275: Restore data locality to workers reading InputSplits
  where possible without querying NameNode, ZooKeeper. (Eli Reisman
  via jghoman)
  
  GIRAPH-258: Check type compatibility before submitting job. 
  (Eli Reisman via jghoman)

  GIRAPH-218: Consolidate all I/O Format classes under one roof in
  lib/ directory.  (Eli Reisman via jghoman)

  GIRAPH-259: TestBspBasic.testBspPageRank is broken (majakabiljo via
  apresta)

  GIRAPH-256: Partitioning outgoing graph data during INPUT_SUPERSTEP
  by # of vertices results in wide variance in RPC message sizes. (Eli
  Reisman via jghoman)
  
  GIRAPH-290: Add committer information for Alessandro Presta to pom.xml
  (apresta)

  GIRAPH-286. Remove DISCLAIMER from source tree. (jghoman)

  GIRAPH-287: Add option to limit the number of open requests.
  (Maja Kabiljo via jghoman)

  GIRAPH-262: Netty optimization to handle requests locally whenever
  possible. (aching)

  GIRAPH-288: Bandwidth tracking - subset of GIRAPH-262. (aching)

  GIRAPH-289: Add thread and channel pooling to NettyClient and
  NettyServer. (ekoontz via aching)

  GIRAPH-276: Fix broken tests in pseudo-distributed mode.
  (Alessandro Presta via jghoman)

  GIRAPH-281: Add options to control Netty's per-channel receive and
  send buffer sizes (ekoontz via aching).

  GIRAPH-228: SimpleTriangleClosingVertex should not use ArrayWritable
  for a vertex value. (Eli Reisman via jghoman)

  GIRAPH-209: Include munge version in artifact name. 
  (Eli Reisman via jghoman)
  